discussion/jgit/156153/156153_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

Decouple JSch and BouncyCastle from JGit Core

Motivation: JSch and BouncyCastle serve as 'default' implementations of
the SSH transport and GPG Signer respectively. If a client application
does not use either of these then there is no need to pull in these
depends, especially BouncyCastle which is a large library.

Bug: 553625
Bug: 559106
Change-Id: I5979c8a9dbbe878a2e8ac0fbfde7230059d74dc2
Signed-off-by: Michael Dardis <git@md-5.net>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Michael D
Date: 2020-02-21 23:45:24.000000000
Message: 
Uploaded patch set 12.
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-02-21 23:45:38.000000000
Message: 
Patch Set 12:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/2730/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-02-22 00:20:41.000000000
Message: 
Patch Set 12: Verified+1

Build Successful 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/2730/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: David Ostrovsky
Date: 2020-04-17 19:16:10.000000000
Message: 
Patch Set 12:

> All changes except the split (which I will do when no other review
 > comments are left) should be addressed now.

Are you going to split this change?
----------------------------------------------------------------------------------------------------------------------
Author: David Ostrovsky
Date: 2020-04-17 21:29:10.000000000
Message: 
Patch Set 12: Code-Review-1

(12 comments)

I cannot amend this change, so that I've uploaded a follow-up change. Feel free to squash my change and abandon it.

However, even with my fix some tests cannot be built with Bazel. Is the master broken?
Line:14, org.eclipse.jgit.gpg.bc.test/BUILD -> This is not visible here.

Line:16, org.eclipse.jgit.gpg.bc/BUILD -> It's not visible here.

Line:17, org.eclipse.jgit.gpg.bc/BUILD -> It's not visible here.

Line:18, org.eclipse.jgit.gpg.bc/BUILD -> It's not visible here.

Line:23, org.eclipse.jgit.pgm/BUILD -> You can only omit the target, if its is called the same, as the package: "bc", but the target is called "gpg-bc", so that it must be:

  "//org.eclipse.jgit.gpg.bc:gpg-bc"

Line:29, org.eclipse.jgit.pgm/BUILD -> This package doesn't exist, this should be:

  "//org.eclipse.jgit.ssh.jsch:ssh-jsch"

Line:11, org.eclipse.jgit.ssh.jsch.test/BUILD -> This is not visible:

  in java_test rule //org.eclipse.jgit.ssh.jsch.test:jsch: target '//lib:eddsa'
  is not visible from target '//org.eclipse.jgit.ssh.jsch.test:jsch'.

Line:15, org.eclipse.jgit.ssh.jsch.test/BUILD -> This is not visible:

  in java_test rule //org.eclipse.jgit.ssh.jsch.test:jsch: target '//org.eclipse.jgit.test:sshd-helpers'
  is not visible from target '//org.eclipse.jgit.ssh.jsch.test:jsch'.

Line:16, org.eclipse.jgit.ssh.jsch.test/BUILD -> Bazel strict dependency error, these deps are missing here:

  //lib:jsch
  //org.eclipse.jgit.junit:junit

Even worse, //lib:jsch is not visible.

Line:16, org.eclipse.jgit.ssh.jsch/BUILD -> This is not visible.

Line:17, org.eclipse.jgit.ssh.jsch/BUILD -> This is not visible from this package:

  in java_library rule //org.eclipse.jgit.ssh.jsch:ssh-jsch: target '//lib:jzlib' is not visible from target '//org.eclipse.jgit.ssh.jsch:ssh-jsch'.
  Check the visibility declaration of the former target if you think the dependency is legitimate

Line:28, org.eclipse.jgit.test/src/org/eclipse/jgit/transport/ssh/SshTestBase.java -> This would add the dependency to the //org.eclipse.jgit.ssh.jsch that wasn't added to the BUILD file, for sshd-helpers target:

  $ bazel build org.eclipse.jgit.test:sshd-helpers
  rg.eclipse.jgit.test/src/org/eclipse/jgit/transport/ssh/SshTestBase.java:28: error: package org.eclipse.jgit.transport.jsch does not exist
import org.eclipse.jgit.transport.jsch.JschConfigSessionFactory;
                                      ^
org.eclipse.jgit.test/src/org/eclipse/jgit/transport/ssh/SshTestBase.java:151: error: cannot find symbol
		if (getSessionFactory() instanceof JschConfigSessionFactory) {

This dependency is missing there:

  "//org.eclipse.jgit.ssh.jsch:ssh-jsch",

----------------------------------------------------------------------------------------------------------------------
Author: David Ostrovsky
Date: 2020-04-17 21:38:25.000000000
Message: 
Patch Set 12:

> However, even with my fix some tests cannot be built with Bazel. Is
 > the master broken?

I wrote this issue and mentioned there the build breakage: [1].

* [1] https://bugs.eclipse.org/bugs/show_bug.cgi?id=562274
----------------------------------------------------------------------------------------------------------------------
Author: Michael D
Date: 2020-04-17 22:16:23.000000000
Message: 
Patch Set 12:

Hi David,

Thanks for that.
Yeah I suppose I will split it when I can.

Perhaps the Jenkins bot needs to test the Bazel build as well? Having two build systems especially Bazel which is far more obscure than Maven in the Java context is a bit difficult.

Thanks
Michael
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2020-04-17 22:20:14.000000000
Message: 
Patch Set 12:

> Hi David,
 > 
 > Thanks for that.
 > Yeah I suppose I will split it when I can.
 > 
 > Perhaps the Jenkins bot needs to test the Bazel build as well?
 > Having two build systems especially Bazel which is far more obscure
 > than Maven in the Java context is a bit difficult.
 > 
 > Thanks
 > Michael

yes, we should do that, need another docker image to run that on Jenkins at Eclipse which runs in Kubernetes
----------------------------------------------------------------------------------------------------------------------
Author: Thomas Wolf
Date: 2020-04-24 13:38:15.000000000
Message: 
Patch Set 12:

This change makes a lot of previously internal classes public API in the new bundles. Apart from the fact that I don't see any @since tags added I'm also not sure these classes have a quality API. In fact, I know for sure that I'm not happy with the GPG classes. So I would sugggest to keep them _all_ non-public, using x-friends in MANIFEST.MF to restrict the visibility to org.eclipse.jgit.

Of course people can still access the classes if they ignore the warnings or don't use OSGi, but at least we'd still be free to improve these interfaces.
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2020-04-24 18:22:55.000000000
Message: 
Patch Set 12:

> This change makes a lot of previously internal classes public API
 > in the new bundles. Apart from the fact that I don't see any @since
 > tags added I'm also not sure these classes have a quality API. In
 > fact, I know for sure that I'm not happy with the GPG classes. So I
 > would sugggest to keep them _all_ non-public, using x-friends in
 > MANIFEST.MF to restrict the visibility to org.eclipse.jgit.
 > 
 > Of course people can still access the classes if they ignore the
 > warnings or don't use OSGi, but at least we'd still be free to
 > improve these interfaces.

meanwhile I rebased this change onto master and resolved the conflicts
I'll push this intermediate state and then will split this change into two
and apply the changes you propose
----------------------------------------------------------------------------------------------------------------------
